--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-iphone-x-helper",
+  "name": "react-native-iphone-screen-helper",
   "version": "2.0.0",
-  "description": "A library to help you design your react-native app for the iPhone X",
+  "description": "A library to help you design your react-native app for the iPhone",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
@@ -9,21 +9,27 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ptelad/react-native-iphone-x-helper.git"
+    "url": "git+https://github.com/chlee1001/react-native-iphone-screen-helper.git"
   },
   "keywords": [
     "react-native",
     "ios",
     "iphone-x",
     "iphoneX",
+    "iphone-notch",
+    "iphone",
     "stylesheet"
   ],
-  "author": "Elad Gil",
+  "author": "Chaehyeon Lee <chlee1001@naver.com>",
+  "contributors": [
+    "ptelad <https://github.com/ptelad>",
+    "Norch <https://github.com/Norcy>"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ptelad/react-native-iphone-x-helper/issues"
+    "url": "https://github.com/chlee1001/react-native-iphone-screen-helper/issues"
   },
-  "homepage": "https://github.com/ptelad/react-native-iphone-x-helper#readme",
+  "homepage": "https://github.com/chlee1001/react-native-iphone-screen-helper#readme",
   "peerDependencies": {
     "react-native": ">=0.42.0"
   }
